# fub_span

./: .gitmodules  CMakeLists.txt  README.md
doc/: span.doxygen
include/fub/: span.hpp
include/fub/span/: concepts.hpp  dimensions.hpp  span.hpp  spanios.hpp  view.hpp
include/fub/span/accessor/: native.hpp
include/fub/span/decorator/: check_bounds.hpp  identity.hpp
include/fub/span/error_policy/: ignore.hpp  terminate.hpp  throw_exception.hpp
test/: dimensions.t.cpp  identity.t.cpp  native.t.cpp  span.t.cpp  spanios.t.cpp  sum_span.cpp
